tests/accept/test_minus.lp
# expected =-4

Program
{

int x = 0;
int y = 0;

int main(){
    int x = -4;
    if (x == 2) then{
       return x;
    }
    
    return x;
}

} 