tests/reject/or_logic_operation_error.lp
# expected =Type Error in operation || : left-hand side has type int but right-hand side has type bool at line 6
Program {

bool main(){

    bool x = 10 || false;
    return x;

}


}